--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
     <!-- Primary Meta Tags -->
     <title>Shipping Services in Dubai | About INC SHIPPING</title>
     <meta name="description"
-        content="INC Express Shipping LLC, a leading provider of Logistics, Warehousing, and Shipping Services in Dubai, offers exclusive services with exceptional quality."/>
+        content="INC Express Shipping LLC, a leading provider of Logistics, Warehousing, and Shipping Services in Dubai, offers exclusive services with exceptional quality." />
     <meta name="keywords"
         content="Cross Trade Service Company in Dubai, Corporate Courier Service in Dubai, Medical Equipment Shipping Services in Dubai, Sea Freight Services in Dubai, Customs Clearance Services in Dubai, Warehousing Company in Dubai / UAE, Best Courier Channel Partners in Dubai, Hazardous Goods Shipping Services in Dubai, Pharmaceutical Shipping Service in Dubai, Air Freight Company in Dubai" />
     <meta name="language" content="english" />
@@ -54,13 +54,13 @@
     <meta name="ICBM" content="25.3, 55.4" />
 
     <!-- Open Graph / Facebook -->
-    <meta property="og:title" content="Shipping Services in Dubai | About INC SHIPPING"/>
-    <meta property="og:site_name" content="INC Express Shipping L.L.C"/>
-    <meta property="og:url" content="https://incshipping.com/about"/>
+    <meta property="og:title" content="Shipping Services in Dubai | About INC SHIPPING" />
+    <meta property="og:site_name" content="INC Express Shipping L.L.C" />
+    <meta property="og:url" content="https://incshipping.com/about" />
     <meta property="og:description" content="INC Express Shipping LLC, a leading provider of Logistics, Warehousing, and
-        Shipping Services in Dubai, offers exclusive services with exceptional quality."/>
-    <meta property="og:type" content=website/>
-    <meta property="og:image" content=""/>
+        Shipping Services in Dubai, offers exclusive services with exceptional quality." />
+    <meta property="og:type" content=website />
+    <meta property="og:image" content="" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
@@ -70,8 +70,17 @@
         content="INC Express Shipping LLC, a leading provider of Logistics, Warehousing, and Shipping Services in Dubai, offers exclusive services with exceptional quality." />
     <meta property="twitter:image" content="" />
 
-    
 
+    <!-- Google Tag Manager -->
+    <script>(function (w, d, s, l, i) {
+            w[l] = w[l] || []; w[l].push({
+                'gtm.start':
+                    new Date().getTime(), event: 'gtm.js'
+            }); var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+                    'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-KXGHLLB3');</script>
+    <!-- End Google Tag Manager -->
 </head>
 
 <body>
