--- a/corporate-courier.html
+++ b/corporate-courier.html
@@ -39,8 +39,8 @@
 
     <!-- Primary Meta Tags -->
     <title>Courier Company in Dubai | INC Shipping Courier Services UAE</title>
-    <meta name="description" content=”INC Express is a leading Courier Company in Dubai, offering seamless corporate
-        delivery solutions across diverse industries with 24/7 service for a smooth supply chain.">
+    <meta name="description" content="INC Express is a leading Courier Company in Dubai, offering seamless corporate
+        delivery solutions across diverse industries with 24/7 service for a smooth supply chain."/>
     <meta name="keywords"
         content="Courier Services in UAE, Courier Services Dubai, Courier Company in Dubai, The Professional Courier Services in UAE, Corporate Courier Service in Dubai, Middle East Leading Courier Services Dubai, The Professional International Courier in Dubai, International Courier Services in Dubai, Corporate Courier Service in Dubai, Shipping and Logistics Company in Dubai " />
     <meta name="language" content="english" />
@@ -74,7 +74,13 @@
 
 
 
-
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-KXGHLLB3');</script>
+    <!-- End Google Tag Manager -->
 </head>
 
 <body>
