--- a/index.html
+++ b/index.html
@@ -69,6 +69,16 @@
         content="INC Express Shipping LLC excels in its name as the Best Logistics and Shipping Company in Dubai UAE, with an extensive approach in more than 20 countries." />
     <meta property="twitter:image" content="" />
 
+
+
+
+    <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-KXGHLLB3');</script>
+    <!-- End Google Tag Manager -->
 </head>
 
 <body>
