--- a/sea-freight.html
+++ b/sea-freight.html
@@ -70,6 +70,16 @@
         content="Reliable Sea Freight Forwarding Company in Dubai offering efficient, cost-effective shipping solutions. Choose us for all your sea freight needs in Dubai. Contact us today!" />
     <meta property="twitter:image" content="" />
 
+
+
+
+    <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-KXGHLLB3');</script>
+    <!-- End Google Tag Manager -->
 </head>
 
 <body>
