--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -70,6 +70,22 @@ Welcome to INC Express Shipping LLC's official website. Agree to our Terms and C
     <meta property="twitter:description"
         content="Welcome to INC Express Shipping LLC's official website. Agree to our Terms and Conditions to access our freight forwarding, logistics, transport, and warehousing services. We prioritize personalized service to ensure safe and timely delivery of your cargo." />
     <meta property="twitter:image" content="" />
+
+
+
+
+
+
+
+
+
+    <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-KXGHLLB3');</script>
+    <!-- End Google Tag Manager -->
 </head>
 
 <body>
