--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -457,6 +457,17 @@ Welcome to INC Express Shipping LLC's official website. Agree to our Terms and C
 
     <script src="js/main.js"></script>
     <script src="js/animate.js"></script>
+
+
+
+
+
+
+
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KXGHLLB3" height="0" width="0"
+            style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
 </body>
 
 </html>
