--- a/cross-trade.html
+++ b/cross-trade.html
@@ -586,6 +586,17 @@ Road Freight Services in Dubai " />
 
     <script src="js/main.js"></script>
     <script src="js/animate.js"></script>
+
+
+
+
+
+
+
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KXGHLLB3" height="0" width="0"
+            style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
 </body>
 
 </html>
