--- a/corporate-courier.html
+++ b/corporate-courier.html
@@ -40,7 +40,7 @@
     <!-- Primary Meta Tags -->
     <title>Courier Company in Dubai | INC Shipping Courier Services UAE</title>
     <meta name="description" content="INC Express is a leading Courier Company in Dubai, offering seamless corporate
-        delivery solutions across diverse industries with 24/7 service for a smooth supply chain."/>
+        delivery solutions across diverse industries with 24/7 service for a smooth supply chain." />
     <meta name="keywords"
         content="Courier Services in UAE, Courier Services Dubai, Courier Company in Dubai, The Professional Courier Services in UAE, Corporate Courier Service in Dubai, Middle East Leading Courier Services Dubai, The Professional International Courier in Dubai, International Courier Services in Dubai, Corporate Courier Service in Dubai, Shipping and Logistics Company in Dubai " />
     <meta name="language" content="english" />
@@ -55,11 +55,11 @@
     <meta name="ICBM" content="25.3, 55.4" />
 
     <!-- Open Graph / Facebook -->
-    <meta property="og:title" content="Courier Company in Dubai | INC Shipping Courier Services UAE"/>
+    <meta property="og:title" content="Courier Company in Dubai | INC Shipping Courier Services UAE" />
     <meta property="og:site_name" content=INC Express Shipping L.L.C>
-    <meta property="og:url" content="https://incshipping.com/corporate-courier"/>
+    <meta property="og:url" content="https://incshipping.com/corporate-courier" />
     <meta property="og:description" content="INC Express is a leading courier company in Dubai, offering seamless
-        corporate delivery solutions across diverse industries with 24/7 service for a smooth supply chain."/>
+        corporate delivery solutions across diverse industries with 24/7 service for a smooth supply chain." />
     <meta property="og:type" content=website>
     <meta property="og:image" content="">
 
@@ -74,13 +74,28 @@
 
 
 
-<!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-KXGHLLB3');</script>
+    <!-- Google Tag Manager -->
+    <script>(function (w, d, s, l, i) {
+            w[l] = w[l] || []; w[l].push({
+                'gtm.start':
+                    new Date().getTime(), event: 'gtm.js'
+            }); var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+                    'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-KXGHLLB3');</script>
     <!-- End Google Tag Manager -->
+
+
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-Y1Q6BVGDES"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-Y1Q6BVGDES');
+    </script>
 </head>
 
 <body>
