--- a/road-freight.html
+++ b/road-freight.html
@@ -38,7 +38,7 @@
     <!-- Primary Meta Tags -->
     <title>Road Freight Forwarding Services in Dubai | Road Transporters in Dubai</title>
     <meta name="description" content="Discover reliable Road Freight Forwarding Services in Dubai with INC SHIPPING.
-        Streamlined Logistics Solutions for your Transportation needs. Contact us today!"/>
+        Streamlined Logistics Solutions for your Transportation needs. Contact us today!" />
     <meta name="keywords"
         content="Transportation Service in Dubai, Road Transport in Dubai, Logistic Service in Dubai, Third-Party Logistics, Express Logistics in Dubai, Freight Forwarding Company in Dubai, Land Freight In Dubai, UAE, Road Freight Dubai, Dubai Logistics Services, Freight Forwarding Dubai" />
     <meta name="language" content="english" />
@@ -53,12 +53,12 @@
     <meta name="ICBM" content="25.3, 55.4" />
 
     <!-- Open Graph / Facebook -->
-    <meta property="og:title" content="Road Freight Forwarding Services in Dubai | Road Transporters in Dubai"/>
-    <meta property="og:site_name" content="INC Express Shipping L.L.C"/>
-    <meta property="og:url" content="https://incshipping.com/road-freight"/>
+    <meta property="og:title" content="Road Freight Forwarding Services in Dubai | Road Transporters in Dubai" />
+    <meta property="og:site_name" content="INC Express Shipping L.L.C" />
+    <meta property="og:url" content="https://incshipping.com/road-freight" />
     <meta property="og:description" content="Discover reliable Road Freight Forwarding Services in Dubai with INC
-        SHIPPING. Streamlined Logistics Solutions for your Transportation needs. Contact us today!"/>
-    <meta property="og:type" content="website"/>
+        SHIPPING. Streamlined Logistics Solutions for your Transportation needs. Contact us today!" />
+    <meta property="og:type" content="website" />
     <meta property="og:image" content="">
 
     <!-- Twitter -->
@@ -72,13 +72,28 @@
 
 
 
-<!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-KXGHLLB3');</script>
+    <!-- Google Tag Manager -->
+    <script>(function (w, d, s, l, i) {
+            w[l] = w[l] || []; w[l].push({
+                'gtm.start':
+                    new Date().getTime(), event: 'gtm.js'
+            }); var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+                    'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-KXGHLLB3');</script>
     <!-- End Google Tag Manager -->
+
+
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-Y1Q6BVGDES"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-Y1Q6BVGDES');
+    </script>
 </head>
 
 <body>
