--- a/shipment-to-far-east.html
+++ b/shipment-to-far-east.html
@@ -38,7 +38,7 @@
     <!-- Primary Meta Tags -->
     <title>Shipment To Far East Dubai | Shipping Services To Far East</title>
     <meta name="description" content="Efficient and reliable International Shipment Service in Dubai. INC Shipping
-        connects your business to the world with our trusted global logistics solutions."/>
+        connects your business to the world with our trusted global logistics solutions." />
     <meta name="keywords"
         content="International Shipping Services, Shipments to Far East Dubai, Shipping Company in Dubai, Shipping Services Dubai/UAE, Shipping and Logistics Company in Dubai, Shipping Services Dubai, Shipping in Dubai, Shipping cargo services Dubai, Freight Forwarding Dubai, Sea Freight Shipping Company Dubai" />
     <meta name="language" content="english" />
@@ -53,9 +53,9 @@
     <meta name="ICBM" content="25.3, 55.4" />
 
     <!-- Open Graph / Facebook -->
-    <meta property="og:title" content="Shipment To Far East Dubai | Shipping Services To Far East"/>
-    <meta property="og:site_name" content="INC Express Shipping L.L.C"/>
-    <meta property="og:url" content=https://incshipping.com/shipment-to-far-east/>
+    <meta property="og:title" content="Shipment To Far East Dubai | Shipping Services To Far East" />
+    <meta property="og:site_name" content="INC Express Shipping L.L.C" />
+    <meta property="og:url" content=https://incshipping.com/shipment-to-far-east />
     <meta property="og:description"
         content="Efficient and reliable international shipment service in Dubai. INC Shipping connects your business to the world with our trusted global logistics solutions." />
     <meta property="og:type" content=website>
@@ -72,13 +72,28 @@
 
 
 
-<!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-KXGHLLB3');</script>
+    <!-- Google Tag Manager -->
+    <script>(function (w, d, s, l, i) {
+            w[l] = w[l] || []; w[l].push({
+                'gtm.start':
+                    new Date().getTime(), event: 'gtm.js'
+            }); var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+                    'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-KXGHLLB3');</script>
     <!-- End Google Tag Manager -->
+
+
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-Y1Q6BVGDES"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-Y1Q6BVGDES');
+    </script>
 </head>
 
 <body>
