--- a/international-freight-forwarders.html
+++ b/international-freight-forwarders.html
@@ -29,7 +29,6 @@
 
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 
-    <meta name="robots" content="noindex, nofollow" />
 
 
     <!-- Google tag (gtag.js) -->
@@ -94,6 +93,18 @@
                     'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
         })(window, document, 'script', 'dataLayer', 'GTM-KXGHLLB3');</script>
     <!-- End Google Tag Manager -->
+
+
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-Y1Q6BVGDES"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-Y1Q6BVGDES');
+    </script>
 </head>
 
 
