--- a/international-freight-forwarders.html
+++ b/international-freight-forwarders.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="shortcut icon" type="image/jpg" href="favicon.jpeg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="international-freight-forwarders.css">
 
