--- a/customs-clearance.html
+++ b/customs-clearance.html
@@ -39,8 +39,8 @@
 
     <!-- Primary Meta Tags -->
     <title>Customs Clearance Services in Dubai | Customs Clearance Agent UAE</title>
-    <meta name="description" content=”INC Express offers seamless Customs Clearance Services in Dubai, ensuring
-        efficient freight forwarding, documentation, and authority procedures for hassle-free import and export.">
+    <meta name="description" content="INC Express offers seamless Customs Clearance Services in Dubai, ensuring
+        efficient freight forwarding, documentation, and authority procedures for hassle-free import and export." />
     <meta name="keywords"
         content="Global Trade Compliance and Customs Clearance in Dubai, Customs Clearance in Dubai, Customs Clearance Services in Dubai, Customs Clearance Company in Dubai, Freight Forwarding Company Dubai, Cargo Service Dubai, Customs Clearance Agent in Dubai, Import and Export Customs Clearance Dubai, Best Customs Clearance in Dubai, International Cargo Services Dubai, UAE " />
     <meta name="language" content="english" />
@@ -56,12 +56,12 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:title" content="Customs Clearance Services in Dubai | Customs Clearance Agent UAE" />
-    <meta property="og:site_name" content=INC Express Shipping L.L.C>
-    <meta property="og:url" content=https://incshipping.com/customs-clearance>
-    <meta property="og:description" content=INC Express offers seamless Customs Clearance Services in Dubai, ensuring
-        efficient freight forwarding, documentation, and authority procedures for hassle-free import and export.>
-    <meta property="og:type" content=website>
-    <meta property="og:image" content="">
+    <meta property="og:site_name" content="INC Express Shipping L.L.C" />
+    <meta property="og:url" content="https://incshipping.com/customs-clearance" />
+    <meta property="og:description" content="INC Express offers seamless Customs Clearance Services in Dubai, ensuring
+        efficient freight forwarding, documentation, and authority procedures for hassle-free import and export." />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
