--- a/pharma-shipment-handling.html
+++ b/pharma-shipment-handling.html
@@ -511,6 +511,7 @@
                             <a href="services.html">Services</a>
                             <a href="">Blogs</a>
                             <a href="contact.html">Contact Us</a>
+                            <a href="international-freight-forwarders.html">International Freight Forwarders</a>
                         </div>
                     </div>
                     <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12 footer_quick_links">
