--- a/international-freight-forwarders.html
+++ b/international-freight-forwarders.html
@@ -411,6 +411,9 @@
                 </div>
             </div>
         </div>
+        <button onclick="window.location.href='#sec7'">
+            Get a Quote
+        </button>
     </section>
 
 
@@ -539,7 +542,7 @@
         </div>
     </section>
 
-    <section class="sec7">
+    <section class="sec7" id="sec7">
         <div class="row">
             <div class="col-xl-5 col-lg-5 col-md-5 col-sm-0 col-0 sec7_col1"></div>
             <div class="col-xl-7 col-lg-7 col-md-7 col-sm-12 col-12 sec7_col2" id="contact_form">
@@ -609,9 +612,9 @@
             </div>
             <p class="footer_copyright">
                 © 2024 INC Express Shipping LLC. All Rights Reserved.
-                <a target="_blank" href="">Privacy Policy</a>
+                <a target="_blank" href="privacy-policy.html">Privacy Policy</a>
                 |
-                <a target="_blank" href="">Terms of Service</a>
+                <a target="_blank" href="terms-and-conditions.html">Terms of Service</a>
             </p>
             <p class="footer_attribute">
                 Designed and Developed by:
@@ -679,7 +682,7 @@
                 arrows: true,
                 responsive: [
                     {
-                        breakpoint: 1024,
+                        breakpoint: 1500,
                         settings: {
                             slidesToShow: 3,
                             slidesToScroll: 3,
@@ -688,14 +691,14 @@
                         }
                     },
                     {
-                        breakpoint: 600,
+                        breakpoint: 1300,
                         settings: {
                             slidesToShow: 2,
                             slidesToScroll: 2
                         }
                     },
                     {
-                        breakpoint: 480,
+                        breakpoint: 800,
                         settings: {
                             slidesToShow: 1,
                             slidesToScroll: 1
