--- a/index.html
+++ b/index.html
@@ -575,6 +575,22 @@
         <p class="text_icon">Talk to us?</p>
     </div>
 
+    <div class="cookies_float">
+        <p>This page places and reads third party cookies on your browser that are used for non-essential purposes
+            including targeting of ads. <a href="cookies-policy.html">Learn more.</a> Through these cookies, <a
+                href="">Twitter</a>, <a href="">Facebook</a> , and <a href="">Linkedin</a> collect
+            personal data about you for their own purposes.
+        </p>
+        <div class="coookie_buttons">
+            <button onclick="document.querySelectorAll('.cookies_float').forEach(element => {
+                element.style.display = 'none';
+            });">Accept</button>
+            <button onclick="document.querySelectorAll('.cookies_float').forEach(element => {
+                element.style.display = 'none';
+            });">Decline</button>
+        </div>
+    </div>
+
 
 
 
