--- a/cross-trade.html
+++ b/cross-trade.html
@@ -39,8 +39,8 @@
 
     <!-- Primary Meta Tags -->
     <title>Cross Trade Service Company in Dubai | INC Shipping Dubai </title>
-    <meta name="description" content=”Cross Trade Service Company in Dubai: Expert global transport solutions via air,
-        sea, or road. Simplify international trade with our comprehensive and professional services.">
+    <meta name="description" content="Cross Trade Service Company in Dubai: Expert global transport solutions via air,
+        sea, or road. Simplify international trade with our comprehensive and professional services." />
     <meta name="keywords" content="Cross Trade Service, Cross Trade Service Company in Dubai, Cross Trade Service Provider in Dubai, Cross Trade Service Provider Dubai, Shipping Company in Dubai, Air Freight Company in Dubai, International Cargo Services Dubai, UAE, Shipping and Logistics Company in Dubai, Sea Freight Shipping Service in Dubai,
 Road Freight Services in Dubai " />
     <meta name="language" content="english" />
